Filter important alerts from dark mode fix

--- a/src/scss/_dark.scss
+++ b/src/scss/_dark.scss
@@ -13,7 +13,7 @@
   .modal-content,
   .modal-header,
   .dropdown-menu,
-  .alert {
+  .alert:not(.alert-important) {
     background-color: $dark;
     color: inherit;
   }
